--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,12 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>No es React</title>
+    <title>Othello</title>
   </head>
 
-  <body>
+  <body bgcolor="#E9967A">
   	<!--Mount Point-->
+  	<font size="8">Othello</font>
     <div id="root"></div>
     <script src="client.min.js"></script>
   </body>
